--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Cairo:wght@300;400;500;700&family=Inter:wght@400;700&family=Jomhuria&family=Lexend+Deca&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,800&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Outfit:wght@300;400;600;700&family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;0,800;1,400;1,800&family=Raleway:wght@400;700&family=Red+Hat+Display:wght@500;700;900&family=STIX+Two+Text:wght@700&family=Shrikhand&family=Taviraj:wght@900&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Website | AliProg</title>
   </head>
