--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Animated Website | AliProg</title>
   </head>
   <body>
+    <span class="progress"></span>
     <header id="header">
       <div class="container">
         <a href="#" class="logo">AliProg</a>
@@ -120,7 +121,7 @@
                 sunt esse assumenda quas consequatur odit!
               </p>
               <div class="items-footer">
-                <a href="#">Read More</a>
+                <button>Read More</button>
                 <i class="fas fa-long-arrow-alt-right"></i>
               </div>
             </div>
@@ -134,7 +135,7 @@
                 sunt esse assumenda quas consequatur odit!
               </p>
               <div class="items-footer">
-                <a href="#">Read More</a>
+                <button>Read More</button>
                 <i class="fas fa-long-arrow-alt-right"></i>
               </div>
             </div>
@@ -148,7 +149,7 @@
                 sunt esse assumenda quas consequatur odit!
               </p>
               <div class="items-footer">
-                <a href="#">Read More</a>
+                <button>Read More</button>
                 <i class="fas fa-long-arrow-alt-right"></i>
               </div>
             </div>
@@ -162,7 +163,7 @@
                 sunt esse assumenda quas consequatur odit!
               </p>
               <div class="items-footer">
-                <a href="#">Read More</a>
+                <button>Read More</button>
                 <i class="fas fa-long-arrow-alt-right"></i>
               </div>
             </div>
@@ -176,7 +177,7 @@
                 sunt esse assumenda quas consequatur odit!
               </p>
               <div class="items-footer">
-                <a href="#">Read More</a>
+                <button>Read More</button>
                 <i class="fas fa-long-arrow-alt-right"></i>
               </div>
             </div>
@@ -190,7 +191,7 @@
                 sunt esse assumenda quas consequatur odit!
               </p>
               <div class="items-footer">
-                <a href="#">Read More</a>
+                <button>Read More</button>
                 <i class="fas fa-long-arrow-alt-right"></i>
               </div>
             </div>
@@ -204,7 +205,7 @@
                 sunt esse assumenda quas consequatur odit!
               </p>
               <div class="items-footer">
-                <a href="#">Read More</a>
+                <button>Read More</button>
                 <i class="fas fa-long-arrow-alt-right"></i>
               </div>
             </div>
@@ -218,7 +219,7 @@
                 sunt esse assumenda quas consequatur odit!
               </p>
               <div class="items-footer">
-                <a href="#">Read More</a>
+                <button>Read More</button>
                 <i class="fas fa-long-arrow-alt-right"></i>
               </div>
             </div>
@@ -452,10 +453,18 @@
             <div class="info">
               <img src="images/team-01.jpg" alt="" />
               <div class="social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
               </div>
             </div>
             <div class="texts">
@@ -467,10 +476,18 @@
             <div class="info">
               <img src="images/team-02.jpg" alt="" />
               <div class="social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
               </div>
             </div>
             <div class="texts">
@@ -482,10 +499,18 @@
             <div class="info">
               <img src="images/team-03.jpg" alt="" />
               <div class="social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
               </div>
             </div>
             <div class="texts">
@@ -497,10 +522,18 @@
             <div class="info">
               <img src="images/team-04.jpg" alt="" />
               <div class="social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
               </div>
             </div>
             <div class="texts">
@@ -512,10 +545,18 @@
             <div class="info">
               <img src="images/team-05.png" alt="" />
               <div class="social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
               </div>
             </div>
             <div class="texts">
@@ -527,10 +568,18 @@
             <div class="info">
               <img src="images/team-06.png" alt="" />
               <div class="social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
               </div>
             </div>
             <div class="texts">
@@ -542,10 +591,18 @@
             <div class="info">
               <img src="images/team-07.jpg" alt="" />
               <div class="social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
               </div>
             </div>
             <div class="texts">
@@ -557,10 +614,18 @@
             <div class="info">
               <img src="images/team-08.jpg" alt="" />
               <div class="social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a href="https://linkedin.com" target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+                <a href="https://youtube.com" target="_blank"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
               </div>
             </div>
             <div class="texts">
@@ -937,7 +1002,11 @@
               <input type="text" placeholder="Your Name" />
               <input type="email" placeholder="Your Email" />
               <input type="number" placeholder="Your Phone" />
-              <textarea placeholder="Tell Us About Your Needs"></textarea>
+              <textarea
+                placeholder="Tell Us About Your Needs"
+                name="message"
+              ></textarea>
+              <p>Characters Counter: <span class="counter">0</span></p>
               <input type="submit" value="Send" />
             </form>
           </div>
@@ -949,9 +1018,15 @@
         <div class="box-1">
           <h1>AliProg</h1>
           <div class="social">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-youtube"></i>
+            <a href="https://facebook.com" target="_blank">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://youtube.com">
+              <i class="fab fa-youtube"></i>
+            </a>
           </div>
           <p class="info">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus
@@ -1032,5 +1107,6 @@
       </div>
       <p class="footer-title">Made With &lt;3 By AliMo</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
